# sound_utils

./: .clang-format  .gitignore  CMakeLists.txt  README.md  sound_utils.code-workspace
.cmake/: clang-format.cmake  cxx_config.cmake  dependency_dsp_work_utils.cmake  dependency_eigen.cmake  eigen_install.cmake
.github/workflows/: clang-format.yml  cmake.yml
docs/: Gemfile  _config.yml  index.md
docs/_docs/: index.md
docs/_docs/getting_started/: index.md  installation_develop.md
docs/_layouts/: page.html
docs/assets/css/: style.scss
docs/assets/js/: main.js
include/: CMakeLists.txt  reader.hpp
lib/: CMakeLists.txt
lib/reader/: CMakeLists.txt  reader.cpp
test/: CMakeLists.txt
test/available_with_eigen/: CMakeLists.txt  with_eigen.cpp
test/available_with_utils/: CMakeLists.txt  utils_available_test.cpp
test/reader/: CMakeLists.txt  reader_test.cpp  test.txt
